Fri Sep 26 05:12:10 2014  Eric Wong  <e@80x24.org>

	* man/ruby.1: document stack size env variables
	  [Feature #10197]

Thu Sep 25 19:37:34 2014  Eric Wong  <e@80x24.org>

	* io.c (free_io_buffer): new function for a common pattern
	  (clear_readconv): use free_io_buffer
	  (rb_io_fptr_finalize): ditto

Thu Sep 25 07:51:07 2014  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/matrix.rb: Fix docs. Patched by Ben Woodall. [GH-726]

Wed Sep 24 19:04:04 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* enc/unicode/data: New directory for downloaded Unicode
	  data files.

Wed Sep 24 18:59:59 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/downloader.rb: Adjusting example for
	  Downloader.download to implementation changes in r47693.

Wed Sep 24 18:06:06 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/downloader.rb: Removing unused method
	  Downloader.download_if_modified_since.
	  (if ever used, just replace with Downloader.download)

Wed Sep 24 17:59:59 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/downloader.rb: Fixing raise after return.

Wed Sep 24 17:55:55 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/downloader.rb: Made Unicode data file location available
	  via :unicode Symbol.

Wed Sep 24 10:45:45 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/downloader.rb: Small fix to documentation comment.

Tue Sep 23 22:00:20 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parse_ident): just after a label, new expression should
	  start, cannot be a modifier.  [ruby-core:65211] [Bug #10279]

Tue Sep 23 16:07:07 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/downloader.rb: added Downloader.download_if_modified_since
	  to reduce downloads of large files that change only rarely.
	  [ruby-core:65164] [CommonRuby - Feature #10084]

Tue Sep 23 11:55:09 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .travis.yml: added rubyspec into travis tasks and eliminate to stdout.
