@@ -1,3 +1,11 @@
+Fri Sep 26 05:21:01 2014  Eric Wong  <e@80x24.org>
+
+	* object.c (rb_class_real): do not dereference 0 VALUE
+
+	* test/ruby/test_module.rb (test_inspect_segfault):
+	  Test case and bug report by Thomas Stratmann.
+	  [ruby-core:65214] [Bug #10282]
+
 Fri Sep 26 05:12:10 2014  Eric Wong  <e@80x24.org>
 
 	* man/ruby.1: document stack size env variables
